// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event.filter should drop undefined values: evenNum event graph 1`] = `
"Seq [
  1. Single {
     \\"type\\": \\"emit\\",
     \\"group\\": \\"cmd\\",
     \\"data\\": {
       \\"subtype\\": \\"event\\",
       \\"fullName\\": \\"number →? *\\"
     }
  },
  2. Multi [
     *  Single {
        \\"type\\": \\"run\\",
        \\"group\\": \\"cmd\\",
        \\"data\\": {}
     }
  ]
]"
`;

exports[`event.filter should drop undefined values: num event graph 1`] = `
"Seq [
  1. Single {
     \\"type\\": \\"emit\\",
     \\"group\\": \\"cmd\\",
     \\"data\\": {
       \\"subtype\\": \\"event\\",
       \\"fullName\\": \\"number\\"
     }
  },
  2. Multi [
     *  Seq [
        1. Single {
           \\"type\\": \\"compute\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        2. Single {
           \\"type\\": \\"filter\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {}
        },
        3. Single {
           \\"type\\": \\"emit\\",
           \\"group\\": \\"cmd\\",
           \\"data\\": {
             \\"subtype\\": \\"event\\",
             \\"fullName\\": \\"number →? *\\"
           }
        },
        4. Multi [
           *  Single {
              \\"type\\": \\"run\\",
              \\"group\\": \\"cmd\\",
              \\"data\\": {}
           }
        ]
     ]
  ]
]"
`;
